# bevy-snake

./: Cargo.toml
assets/: grass.psd  snake-debug.psd  snake_sprites.psd
src/: assets.rs  board.rs  colors.rs  common.rs  control.rs  controls.rs  ex-ui.rs  food.rs  lib.rs  main.rs  scoring.rs  settings.rs  snake.rs  ui.rs
src/board/: position.rs
src/scoring/: display.rs
src/ui/: button.rs  checkbox.rs  kayak.rs  mainmenu.rs  settings.rs  snake_selector.rs
