[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
itertools = "0.11"
rand = "0.8.5"
bevy_asset_loader = { version = "0.17", features = ["2d"] }
# bevy_kira_audio = "0.17.0"


[features]
